force-app/main/default/objects/KDCE_TnCHistory__c/KDCE_TnCHistory__c.object-meta.xml
<CustomObject>
    <description>[Korea DCE]Junction Object, that stores the information which User Registration / Contact has accepted which Terms and Conditions.</description>
    <label>Terms and Conditions History</label>
    <nameField>
        <displayFormat>ATaC-{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terms and Conditions History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>