force-app/main/default/objects/KDCE_TnCHistory__c/fields/CCR_Acceptance_Channel__c.field-meta.xml
<CustomField>
    <fullName>CCR_Acceptance_Channel__c</fullName>
    <description>Code indicating the Channel by which acceptance was communicated</description>
    <inlineHelpText>Code indicating the Channel by which acceptance was communicated</inlineHelpText>
    <label>Acceptance Channel</label>
    <length>30</length>
    <type>Text</type>
</CustomField>