force-app/main/default/objects/KDCE_TnCHistory__c/fields/CCR_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>CCR_Acceptance_Date__c</fullName>
    <description>Date of acceptance for the specified terms and conditions</description>
    <inlineHelpText>Date of acceptance for the specified terms and conditions</inlineHelpText>
    <label>Acceptance Date</label>
    <type>DateTime</type>
</CustomField>