force-app/main/default/objects/KDCE_TnCHistory__c/fields/CCR_AcceptedTCIdentifier__c.field-meta.xml
<CustomField>
    <fullName>CCR_AcceptedTCIdentifier__c</fullName>
    <description>External identifier of Accepted T&amp;C. Concatenation of SPICEID,TCCountry, TCRefCode, TCVersion,</description>
    <externalId>true</externalId>
    <label>AcceptedTC Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>