force-app/main/default/objects/KDCE_TnCHistory__c/fields/CCR_TACCountry__c.field-meta.xml
<CustomField>
    <fullName>CCR_TACCountry__c</fullName>
    <description>Country code of Terms and Condition (ISO_3166-1_alpha-2)</description>
    <formula>TEXT(KDCE_TnC__r.CCR_TACCountry__c)</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>