force-app/main/default/objects/KDCE_TnCHistory__c/fields/CCR_TACRefCode__c.field-meta.xml
<CustomField>
    <fullName>CCR_TACRefCode__c</fullName>
    <description>Reference code of Terms and Conditions</description>
    <formula>KDCE_TnC__r.CCR_TACRefCode__c</formula>
    <label>Reference Code</label>
    <type>Text</type>
</CustomField>