force-app/main/default/objects/KDCE_TnCHistory__c/fields/DTE_Contact__c.field-meta.xml
<CustomField>
    <fullName>DTE_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores ID of the related Contact record</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Terms and Conditions History</relationshipLabel>
    <relationshipName>TnCHistories</relationshipName>
    <type>Lookup</type>
</CustomField>