force-app/main/default/objects/KDCE_TnCHistory__c/fields/fm_HistoryName__c.field-meta.xml
<CustomField>
    <fullName>fm_HistoryName__c</fullName>
    <description>Channel + Terms and Conditions Ttile</description>
    <formula>&apos;[&apos; + TEXT(KDCE_TnCVersionSet__r.Channel__c) + &apos;]&apos; + KDCE_TnCVersionSet__r.fm_TnCTitle__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Channel + Terms and Conditions Ttile</inlineHelpText>
    <label>History Name</label>
    <type>Text</type>
</CustomField>