force-app/main/default/objects/KDCE_TnCHistory__c/fields/fm_TnC_Key__c.field-meta.xml
<CustomField>
    <fullName>fm_TnC_Key__c</fullName>
    <formula>TEXT( KDCE_TnCVersionSet__r.TaC__r.KDCE_SubGroup__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T&amp;C Key</label>
    <type>Text</type>
</CustomField>