force-app/main/default/objects/KDCE_TnCHistory__c/fields/fm_TnCName__c.field-meta.xml
<CustomField>
    <fullName>fm_TnCName__c</fullName>
    <formula>KDCE_TnCVersionSet__r.TaC__r.Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T&amp;C Name</label>
    <type>Text</type>
</CustomField>