force-app/main/default/objects/KDCE_TnCHistory__c/fields/KDCE_AcceptanceResponse__c.field-meta.xml
<CustomField>
    <fullName>KDCE_AcceptanceResponse__c</fullName>
    <description>[KDCE] T&amp;C Acceptance Response</description>
    <label>T&amp;C Response</label>
    <length>100</length>
    <type>Text</type>
</CustomField>