force-app/main/default/objects/KDCE_TnCHistory__c/fields/KDCE_Accepted__c.field-meta.xml
<CustomField>
    <fullName>KDCE_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[KDCE]Accepted</description>
    <label>Accepted</label>
    <type>Checkbox</type>
</CustomField>