force-app/main/default/objects/KDCE_TnCHistory__c/fields/KDCE_Channel__c.field-meta.xml
<CustomField>
    <fullName>KDCE_Channel__c</fullName>
    <description>[KDCE] Term &amp; Condition Accepted Channel</description>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>iqos.com</fullName>
            </value>
            <value>
                <fullName>tryiqos</fullName>
            </value>
            <value>
                <fullName>trade-in</fullName>
            </value>
            <value>
                <fullName>MGM</fullName>
            </value>
            <value>
                <fullName>careplus</fullName>
            </value>
            <value>
                <fullName>Easyiqos</fullName>
            </value>
            <value>
                <fullName>getinfo</fullName>
            </value>
            <value>
                <fullName>call center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>