force-app/main/default/objects/KDCE_TnCHistory__c/fields/KDCE_Description__c.field-meta.xml
<CustomField>
    <fullName>KDCE_Description__c</fullName>
    <description>[KDCE] Description</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>