force-app/main/default/objects/KDCE_TnCHistory__c/fields/KDCE_fm_TnCVersion__c.field-meta.xml
<CustomField>
    <fullName>KDCE_fm_TnCVersion__c</fullName>
    <formula>KDCE_TnC__r.KDCE_VersionName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Terms and Condition Version</label>
    <type>Text</type>
</CustomField>