force-app/main/default/objects/KDCE_TnCHistory__c/fields/KDCE_TnC__c.field-meta.xml
<CustomField>
    <fullName>KDCE_TnC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[KDCE]Stores ID of the related Terms and Conditions record</description>
    <label>Terms and Conditions</label>
    <referenceTo>TermsandConditions__c</referenceTo>
    <relationshipLabel>Terms and Conditions History</relationshipLabel>
    <relationshipName>Accepted_Terms_and_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>