force-app/main/default/objects/KDCE_TnCHistory__c/fields/KDCE_TnCVersionSet__c.field-meta.xml
<CustomField>
    <fullName>KDCE_TnCVersionSet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[KDCE] Terms and Conditions Version Set</description>
    <label>Terms and Conditions VersionSet</label>
    <referenceTo>KDCE_TnCVersionSet__c</referenceTo>
    <relationshipLabel>Terms and Conditions History</relationshipLabel>
    <relationshipName>TnCHistory</relationshipName>
    <type>Lookup</type>
</CustomField>