force-app/main/default/objects/KDCE_TnCHistory__c/fields/KDCE_Version__c.field-meta.xml
<CustomField>
    <fullName>KDCE_Version__c</fullName>
    <description>Version of Terms and Conditions</description>
    <formula>KDCE_TnC__r.KDCE_VersionNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(X)Version</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>